--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,8 +63,7 @@ form {
 
 input,
 textarea {
-  margin-bottom: 10px;
-  padding: 10px;
+  @apply bg-slate-500 text-white mb-[10px] rounded-[10px] p-[10px];
 }
 
 @media all and (max-width: 656px) {
