--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,10 +33,11 @@ h1 {
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
 }
 
-button {
+button,
+input::file-selector-button {
+  color: white;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -48,22 +49,40 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  @apply border-teal-400;
 }
+input[type='color']:hover {
+  @apply border-teal-400;
+}
+input::file-selector-button:hover {
+  @apply border-teal-400;
+}
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  max-width: 400px;
+input[type='color'] {
+  @apply p-0 w-10 h-10 bg-transparent border-white;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
 
-input,
-textarea {
-  @apply bg-slate-500 text-white mb-[10px] rounded-[10px] p-[10px];
+pre {
+  background-color: rgba(43, 67, 31, 0.778);
+  padding: 4px 16px;
+}
+
+ul {
+  list-style-type: disc;
+  padding-left: 30px;
+}
+ol {
+  list-style-type: decimal;
+  padding-left: 30px;
 }
 
 @media all and (max-width: 656px) {
@@ -80,4 +99,9 @@ textarea {
     padding: 1rem;
     gap: 1.6rem;
   }
+}
+
+.text__editor img {
+  width: auto;
+  max-height: 300px;
 }
