--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,12 +30,13 @@ h1 {
 #app {
   /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem 2rem;
   display: flex;
   flex-direction: column;
 }
 
 button,
+a,
 input::file-selector-button {
   color: white;
   border-radius: 8px;
@@ -51,16 +52,14 @@ input::file-selector-button {
 button:hover {
   @apply border-teal-400;
 }
+a:hover {
+  @apply border-teal-400;
+}
 input[type='color']:hover {
   @apply border-teal-400;
 }
 input::file-selector-button:hover {
   @apply border-teal-400;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 input[type='color'] {
@@ -107,15 +106,4 @@ ol {
   width: auto;
   max-height: 300px;
   margin: 0px auto;
-}
-
-/* ! tests */
-
-.draggable-editable-div {
-  width: 400px;
-  height: 300px;
-  background-color: lightgray;
-  overflow: hidden;
-  position: relative;
-  cursor: move;
 }
