--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,18 +87,28 @@ ol {
 }
 
 @media all and (max-width: 656px) {
-  button {
+  button,
+  a,
+  input::file-selector-button {
     padding: 0.4em 0.8em;
     font-size: 0.8em;
     border-radius: 5px;
   }
   h1 {
-    font-size: 1.4em;
+    font-size: 1em;
     line-height: 0.8;
   }
   #app {
     padding: 1rem;
     gap: 1.6rem;
+  }
+
+  input[type='color'] {
+    @apply p-0 w-7 h-7 bg-transparent border-white;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    cursor: pointer;
+    transition: border-color 0.25s;
   }
 }
 
